<resources>
    <string name="app_name">TwoActivities</string>
    <string name="send">Send</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="name">Name</string>
    <string name="message_recieved">Message Recieved</string>
    <string name="action01">Action01</string>
    <string name="action_02">Action 02</string>
    <string name="action_03">Action 03</string>
    <string name="action_04">Action 04</string>
    <string name="contact">Contact</string>
    <string name="favoutites">Favoutites</string>
    <string name="status">Status</string>
    <string name="order">Order</string>
    <string name="more_actions">More Actions</string>
</resources>