<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/ActionOrder"
        android:orderInCategory="10"
        android:title="@string/order"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_order"
        />
    <item
        android:id="@+id/actionStatus"
        android:orderInCategory="20"
        android:title="@string/status"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_status"
        />
    <item
    android:id="@+id/actionFavoutites"
    android:orderInCategory="30"
    android:title="@string/favoutites"
    app:showAsAction="never"
        android:icon="@drawable/ic_action_favourites"
    />
    <item
        android:id="@+id/actionContact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_contact"/>

    <item
        android:id="@+id/actionNested"
        android:orderInCategory="400"
        android:title="@string/more_actions"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action01"
                android:orderInCategory="30"
                android:title="@string/favoutites"
                app:showAsAction="never"
                android:icon="@drawable/ic_action_favourites"
                />
            <item
                android:id="@+id/action02"
                android:orderInCategory="100"
                android:title="@string/contact"
                app:showAsAction="never"
                android:icon="@drawable/ic_action_contact"
                />

        </menu>
    </item>


</menu>